feature/#115 - Standardise paginated response for user course endpoints
