# modules/infrastructure/backend-api-spring/src/main/java/com/knowy/server/api/usecase/user/GetUserRecommendation.java
@@ -1,12 +1,8 @@
 package com.knowy.server.api.usecase.user;
 
 import com.knowy.core.CourseService;
-import com.knowy.core.domain.Category;
-import com.knowy.core.domain.Filter;
-import com.knowy.core.domain.Page;
-import com.knowy.core.domain.Pagination;
+import com.knowy.core.domain.*;
 import com.knowy.core.exception.data.KnowyDataAccessException;
-import com.knowy.core.exception.data.KnowyInconsistentDataException;
 import com.knowy.core.port.CourseRepository;
 import com.knowy.core.port.LessonRepository;
 import com.knowy.core.port.UserCourseRepository;
@@ -14,11 +10,11 @@ import com.knowy.core.port.UserLessonRepository;
 import com.knowy.core.user.domain.User;
 import com.knowy.core.util.KnowyUseCase;
 import com.knowy.server.api.controller.exception.KnowyInternalServerErrorException;
-import com.knowy.server.api.dto.CourseCardDto;
+import com.knowy.server.api.dto.PaginatedCourseResponseWrapper;
 import com.knowy.server.api.dto.PaginationData;
-import com.knowy.server.api.dto.UserRecommendationsGet200Response;
-import com.knowy.server.api.mapper.CourseCardDtoMapper;
+import com.knowy.server.api.mapper.CourseMapper;
 import com.knowy.server.api.mapper.OrderMapper;
+import com.knowy.server.api.mapper.PagedResultMapper;
 import com.knowy.server.api.util.SecurityHelper;
 
 import java.util.List;
@@ -26,10 +22,10 @@ import java.util.Optional;
 import java.util.Set;
 
 // JAVADOC
-public class GetUserRecommendation implements KnowyUseCase<PaginationData, UserRecommendationsGet200Response> {
+public class GetUserRecommendation implements KnowyUseCase<PaginationData, PaginatedCourseResponseWrapper> {
 
 	private final CourseService courseService;
-	private final CourseCardDtoMapper courseCardDtoMapper = new CourseCardDtoMapper();
+	private final CourseMapper courseMapper = new CourseMapper();
 	private final OrderMapper orderMapper = new OrderMapper();
 
 	public GetUserRecommendation(
@@ -42,12 +38,14 @@ public class GetUserRecommendation implements KnowyUseCase<PaginationData, UserR
 	}
 
 	@Override
-	public UserRecommendationsGet200Response execute(PaginationData paginationData) {
+	public PaginatedCourseResponseWrapper execute(PaginationData paginationData) {
 		User user = new SecurityHelper().getAuthenticatedUser();
 		Pagination pagination = createPagination(paginationData, user.categories());
+		PagedResult<Course> coursesPaged = getCourses(user, pagination);
 
-		return new UserRecommendationsGet200Response()
-			.results(getCourseCardDto(user, pagination));
+		return new PaginatedCourseResponseWrapper()
+			.info(new PagedResultMapper().toPaginationMetaData(coursesPaged))
+			.results(new CourseMapper().toCourseCardDto((List<Course>) coursesPaged.collection()));
 
 	}
 
@@ -63,11 +61,9 @@ public class GetUserRecommendation implements KnowyUseCase<PaginationData, UserR
 			filters);
 	}
 
-	private List<CourseCardDto> getCourseCardDto(User user, Pagination pagination) {
+	private PagedResult<Course> getCourses(User user, Pagination pagination) {
 		try {
-			return courseService.getRecommendedCourses(user.id(), pagination).collection().stream()
-				.map(courseCardDtoMapper::toDto)
-				.toList();
+			return courseService.getRecommendedCourses(user.id(), pagination);
 		} catch (KnowyDataAccessException e) {
 			throw new KnowyInternalServerErrorException("Failed to fetch paginated user course data", e);
 		}
